--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,7 +40,7 @@ spring.datasource.druid.stat-view-servlet.login-username=admin
 #druid 密码
 spring.datasource.druid.stat-view-servlet.login-password=admin
 #配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-spring.datasource.druid.filters=stat,wall,log4j
+spring.datasource.druid.filters=stat,wall
 spring.datasource.druid.filter.stat.log-slow-sql=true
 spring.datasource.druid.filter.stat.slow-sql-millis=1
 # Db Master
